--- a/cv.html
+++ b/cv.html
@@ -14,12 +14,12 @@
 		</div>
 		<nav>
 			<ul>
-				<a href="index.html"><li>Home &nbsp; &nbsp;</li></a>
-				<a href="about.html"><li>About &nbsp; &nbsp;</li></a>
-				<a href="cv.html"><li>CV &nbsp; &nbsp;</li></a>
-				<a href="model_gp.html"><li>Models &nbsp; &nbsp;</li></a>
-				<a href="social.html"><li>Social &nbsp; &nbsp;</li></a>
-				<a href="contact.html"><li>Contact Me</li></a>
+				<li><a href="index.html">Home &nbsp; &nbsp;</a></li>
+				<li><a href="about.html">About &nbsp; &nbsp;</a></li>
+				<li><a href="cv.html">CV &nbsp; &nbsp;</a></li>
+				<li><a href="model_gp.html">Models &nbsp; &nbsp;</a></li>
+				<li><a href="social.html">Social &nbsp; &nbsp;</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
@@ -29,15 +29,31 @@
 			<h2>My Cirriculum Vitae</h2>
 			<div class="columns">
 				<div class="column1">
-					<h1>My Personal Details:</h1></p>
+					<h1>My Personal Details:</h1>
 					<p>Name: Rakshak Bajracharya</p>
 					<p>Address: Bangalamukhi, Patan, Nepal</p>
 					<p>Gender: Male</p>
 					<p>Email: bajracharyarakshak@gmail.com</p>
+					<br><br>
 
+					<h1>Professional Experience:</h1>
+					<p>I dont have experience in the professional industry but I have a passion to work as soon as possible.</p>
+					<br><br>
+
+					<h1>Education:</h1>
+					<p>High School Education</p>
+					<p>HSEB Examination</p>
+					<p>Under-graduate of NAMI</p>
 				</div>
 				<div class="column2">
-					<p><h1>My Skill Assets:</h1></p>
+					<h1>My Skill Assets:</h1>
+					<p>HTML</p>
+					<p>CSS</p>
+					<p>Java</p>
+					<p>Database</p>
+					<p>Javascript</p>
+					<p>PHP</p>
+					<p>Calisthenics</p>
 				</div>
 			</div>		
 		</div>
