--- a/model_gp.html
+++ b/model_gp.html
@@ -6,5 +6,82 @@
 </head>
 <body>
 
+	<header>
+		<div class="background">
+			<div class="background-text">
+				<p>Models GP</p>
+			</div>
+		</div>
+		<nav>
+			<ul>
+				<li><a href="index.html">Home &nbsp; &nbsp;</a></li>
+				<li><a href="about.html">About &nbsp; &nbsp;</a></li>
+				<li><a href="cv.html">CV &nbsp; &nbsp;</a></li>
+				<li><a href="model_gp.html">Models &nbsp; &nbsp;</a></li>
+				<li><a href="social.html">Social &nbsp; &nbsp;</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
+			</ul>
+		</nav>
+	</header>
+
+	<section>
+		<div class="main">
+			<h2>Models GP</h2>
+Models of Good Practice (MGP) in User Interface (UI) Design:<br>
+<br>
+	I have based my website’s design on the website ‘https://www.sitebuilder.com/. Looking at the header you can see that there are actually two different backgrounds and then a text. The first background is an image and the second background is a linear gradient which has low opacity which makes it look like a single image. Finally when the words are put on top of the different background, it makes you notice it the moment you refresh the site.<br><br>
+This is the screenshot of the site <a href="https://www.sitebuilder.com">Sitebuilder</a><br><br>
+
+<img src="images/pic6.png" alt="pic6">
+
+<br> 
+<br>
+As for the body, I picked a site with an interesting way in material design. The name of the website is <a href="http://shiroyukitranslations.com">shiroyukitranslation</a> <br><br>
+
+<img src="images/pic7.png" alt="pic7">
+ 
+<br><br>
+
+This design makes it look as if a piece of paper was floating in the picture of the background since it uses the material design concept. The use of two divs to make one corner rounded and the other flat is also interesting but I did’nt employ it my website. <br><br>
+	I felt that these two sites had sparked my interest, so I used both the parts of the site and made my site the combination of these two concepts. <br><br>
+
+
+
+<br>
+
+Site Validation: <br><br>
+I have made my website and hosted it in github with the url: <a href="http://rakshakbaj.github.io/csy1018"> My Website</a>. So please visit my website.<br><br>
+
+The time I learned HTML and CSS opened my eyes to the world of computer. HTML and CSS bring the beauty of learning to a whole new level. It also started to feel like the screen is our playground and HTML and CSS are the toys that we use to play and have fun. We can make something out of nothing. The true thing to remember when making a website is the limit is the sky. There is almost nothing you can’t do. You can basically let your imagination run wild. Truth be told HTML and CSS is easy but the hard part is to get the picture of the website that you want in your head. Its almost an art. Nowadays lots of website designs are trending. Its turning the flat side of the screen into a 3d world.<br><br>
+I have validated my site as you can see below.<br><br>
+
+Index.html<br><br>
+ <img src="images/pic8.png" alt="pic8"><br><br>
+
+About.html<br><br>
+ <img src="images/pic9.png" alt="pic9"><br><br>
+
+cv.html<br><br>
+ <img src="images/pic10.png" alt="pic10"><br><br>
+
+
+Social.html<br><br>
+ <img src="images/pic11.png" alt="pic11"><br><br>
+
+
+Contact.html<br><br>
+ <img src="images/pic12.png" alt="pic12"><br><br>
+
+
+		</div>
+
+	</section>
+
+	<footer>
+		<div class="copyright">
+			<p> Copyright &copy; - All Rights Reserved</p>
+		</div>
+	</footer>
 </body>
 </html>
+
