--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
 		</div>
 		<nav>
 			<ul>
-				<a href="index.html"><li>Home &nbsp; &nbsp;</li></a>
-				<a href="about.html"><li>About &nbsp; &nbsp;</li></a>
-				<a href="cv.html"><li>CV &nbsp; &nbsp;</li></a>
-				<a href="model_gp.html"><li>Models &nbsp; &nbsp;</li></a>
-				<a href="social.html"><li>Social &nbsp; &nbsp;</li></a>
-				<a href="contact.html"><li>Contact Me</li></a>
+				<li><a href="index.html">Home &nbsp; &nbsp;</a></li>
+				<li><a href="about.html">About &nbsp; &nbsp;</a></li>
+				<li><a href="cv.html">CV &nbsp; &nbsp;</a></li>
+				<li><a href="model_gp.html">Models &nbsp; &nbsp;</a></li>
+				<li><a href="social.html">Social &nbsp; &nbsp;</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
 
 	<section>
 		<div class="main">
-			<img src="images/pic1.jpg" class="movingimg">
+			<img src="images/pic1.jpg" class="movingimg" alt="my pic">
 
 			<p>Hello guys, my name is Rakshak Bajracharya. Welcome to my website. I am an undergraduate of NAMI(Naaya Aayam Multi-Disciplinary Institute). This is my project of Web Development. I have built this website to prove my skills in front-end designing. If you want to know more about me, then you can click the boxes below this paragraph.</p>
 			<div class="click">
