--- a/social.html
+++ b/social.html
@@ -14,12 +14,12 @@
 		</div>
 		<nav>
 			<ul>
-				<a href="index.html"><li>Home &nbsp; &nbsp;</li></a>
-				<a href="about.html"><li>About &nbsp; &nbsp;</li></a>
-				<a href="cv.html"><li>CV &nbsp; &nbsp;</li></a>
-				<a href="model_gp.html"><li>Models &nbsp; &nbsp;</li></a>
-				<a href="social.html"><li>Social &nbsp; &nbsp;</li></a>
-				<a href="contact.html"><li>Contact Me</li></a>
+				<li><a href="index.html">Home &nbsp; &nbsp;</a></li>
+				<li><a href="about.html">About &nbsp; &nbsp;</a></li>
+				<li><a href="cv.html">CV &nbsp; &nbsp;</a></li>
+				<li><a href="model_gp.html">Models &nbsp; &nbsp;</a></li>
+				<li><a href="social.html">Social &nbsp; &nbsp;</a></li>
+				<li><a href="contact.html">Contact Me</a></li>
 			</ul>
 		</nav>
 	</header>
